fix: removed overflow hidden from edit message box

--- a/projects/commudle-admin/src/styles.scss
+++ b/projects/commudle-admin/src/styles.scss
@@ -219,3 +219,12 @@ nb-window.full-screen-height {
 :focus {
   outline: none;
 }
+
+.remove-overflow-mention {
+  overflow: unset;
+  nb-card {
+    nb-card-body {
+      overflow: unset;
+    }
+  }
+}
